grille bookstrap done

--- a/src/index.html
+++ b/src/index.html
@@ -2,32 +2,31 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>eikon parcel starter</title>
+    <title>Tatitotu</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="scss/main.scss" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <div class="col">
-          <div class="nav">
-            <div class="button">Exercer</div>
-            <div class="button">Imprimer</div>
-            <div class="button">Sauvegarder</div>
-            <div class="button">Charger mon defi</div>
-          </div>
-        </div>
+        <div class="col">Nav</div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-5">colonne 1</div>
-        <div class="col-5">colonne 1</div>
+        <div class="col-5">Form</div>
+        <div class="col-5">Form</div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col">colonne 1</div>
+        <div class="col">Footer</div>
       </div>
     </div>
     <script src="js/main.js" type="module"></script>
