--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,34 @@
   <body>
     <div class="container">
       <div class="row">
-        <div class="col">Nav</div>
+        <div class="col">
+          <div class="nav">
+            <div class="nav-branding">
+              <img class="nav-logo" src="/img/logo.png" alt="Logo" />
+              <h1>
+                Défis de <br />
+                conjugaison
+              </h1>
+            </div>
+            <div>
+              <div class="nav-button"><a href="">Exercer</a></div>
+              <div class="nav-button"><a href="">Imprimer</a></div>
+              <div class="nav-button"><a href="">Sauvegarder</a></div>
+              <div class="nav-button"><a href="">Charger mon defi</a></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-5">Form</div>
-        <div class="col-5">Form</div>
+        <div class="col-5">colonne 1</div>
+        <div class="col-5">colonne 1</div>
       </div>
     </div>
     <div class="container">
       <div class="row">
-        <div class="col">Footer</div>
+        <div class="col">colonne 1</div>
       </div>
     </div>
     <script src="js/main.js" type="module"></script>
