first form in proccess

--- a/src/index.html
+++ b/src/index.html
@@ -36,8 +36,49 @@
     </div>
     <div class="container">
       <div class="row">
-        <div class="col-5">colonne 1</div>
-        <div class="col-5">colonne 1</div>
+        <div class="col-5">
+          <div class="form">
+            <div class="form-small">
+              <h2>Mes verbes</h2>
+              <input
+                class="form-recherche"
+                type="text"
+                name="recherche"
+                placeholder="Ajouter un verbe"
+              />
+              <div class="form-verb">
+                Avoir <img src="/img/x_symbol.svg" alt="x" />
+              </div>
+              <div class="form-verb">
+                Aller<img src="/img/x_symbol.svg" alt="x" />
+              </div>
+              <div class="form-verb">
+                Être<img src="/img/x_symbol.svg" alt="x" />
+              </div>
+              <div class="form-verb">
+                Courir<img src="/img/x_symbol.svg" alt="x" />
+              </div>
+              <div class="form-verb">
+                Faire<img src="/img/x_symbol.svg" alt="x" />
+              </div>
+              <div class="form-verb">
+                Manger<img src="/img/x_symbol.svg" alt="x" />
+              </div>
+            </div>
+          </div>
+          <div class="form">
+            <div class="form-small">
+              <h2>Options</h2>
+            </div>
+          </div>
+        </div>
+        <div class="col-5">
+          <div class="form">
+            <div class="form-small">
+              <h2>Mes temps</h2>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <div class="container">
