mes temps form basically done

--- a/src/index.html
+++ b/src/index.html
@@ -127,6 +127,145 @@
           <div class="form">
             <div class="form-small">
               <h2>Mes temps</h2>
+              <div class="form-verb-wrapper">
+                <h3>INDICATIF</h3>
+                <div class="form-verb-settings-box">
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Présent</p>
+                  </div>
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Passé composé</p>
+                  </div>
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Imparfait</p>
+                  </div>
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Plus-que-parfait</p>
+                  </div>
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Futur</p>
+                  </div>
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Futur anterieur</p>
+                  </div>
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Passé simple</p>
+                  </div>
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Passé interieur</p>
+                  </div>
+                </div>
+                <h3 class="form-mes-temps">IMPERATIF</h3>
+                <div class="form-verb-settings-box">
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Présent</p>
+                  </div>
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Passé</p>
+                  </div>
+                </div>
+                <h3 class="form-mes-temps">SUBJONCTIF</h3>
+                <div class="form-verb-settings-box">
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Présent</p>
+                  </div>
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Passé</p>
+                  </div>
+                </div>
+                <div class="form-verb-settings-box">
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Imparfait</p>
+                  </div>
+                  <div class="form-verb-settings">
+                    <label class="switch">
+                      <input type="checkbox" />
+                      <div class="switch-wrapper">
+                        <div class="switch-inner"></div>
+                      </div>
+                    </label>
+                    <p>Plus-que-parfait</p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
