footer & sidebar done

--- a/src/index.html
+++ b/src/index.html
@@ -271,10 +271,22 @@
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="row">
-        <div class="col">colonne 1</div>
-      </div>
+    <div class="footer">
+      <h4>Contact: christophe.roulet@edu-vd.ch</h4>
+    </div>
+    <div class="sidebar">
+      <img src="/img/question_symbol.svg" alt="questuion symbol" />
+      <div class="sidebar-menu"><p>5P</p></div>
+      <div class="sidebar-menu"><p>6P</p></div>
+      <div class="sidebar-menu"><p>7H</p></div>
+      <div class="sidebar-menu"><p>8H</p></div>
+      <div class="sidebar-menu"><p>9H</p></div>
+      <div class="sidebar-menu"><p>10H</p></div>
+      <div class="sidebar-menu"><p>11H</p></div>
+      <div class="sidebar-menu"><p>GRP</p></div>
+      <div class="sidebar-menu"><p>DIFF</p></div>
+      <div class="sidebar-menu"><p>PRON</p></div>
+      <div class="sidebar-menu"><p>FLE</p></div>
     </div>
     <script src="js/main.js" type="module"></script>
   </body>
