hover menu in proccess

--- a/src/index.html
+++ b/src/index.html
@@ -266,6 +266,12 @@
                   </div>
                 </div>
               </div>
+              <hr />
+              <img
+                class="form-arrow"
+                src="/img/row_symbol.svg"
+                alt="Row symbol"
+              />
             </div>
           </div>
         </div>
@@ -276,7 +282,14 @@
     </div>
     <div class="sidebar">
       <img src="/img/question_symbol.svg" alt="questuion symbol" />
-      <div class="sidebar-menu"><p>5P</p></div>
+      <div class="sidebar-menu">
+        <p>5P</p>
+        <div class="sidebar-menu-content">
+          <a href="#">1 Verbe au hasard</a>
+          <a href="#">3 Verbes au hasard</a>
+          <a href="#">6 Verbes au hasard</a>
+        </div>
+      </div>
       <div class="sidebar-menu"><p>6P</p></div>
       <div class="sidebar-menu"><p>7H</p></div>
       <div class="sidebar-menu"><p>8H</p></div>
