first version before smaccs org

--- a/src/index.html
+++ b/src/index.html
@@ -278,13 +278,17 @@
       </div>
     </div>
     <div class="footer">
-      <h4>Contact: christophe.roulet@edu-vd.ch</h4>
+      <a href="#"><a>Contact: christophe.roulet@edu-vd.ch</a></a>
     </div>
     <div class="sidebar">
       <img src="/img/question_symbol.svg" alt="questuion symbol" />
       <div class="sidebar-menu">
         <p>5P</p>
         <div class="sidebar-menu-content">
+          <div class="sidebar-menu-tittle">
+            <h5>Tous</h5>
+            <h5 class="sidebar-number">23</h5>
+          </div>
           <a href="#">1 Verbe au hasard</a>
           <a href="#">3 Verbes au hasard</a>
           <a href="#">6 Verbes au hasard</a>
