--- a/src/index.html
+++ b/src/index.html
@@ -289,12 +289,23 @@
             <h5>Tous</h5>
             <h5 class="sidebar-number">23</h5>
           </div>
-          <a href="#">1 Verbe au hasard</a>
-          <a href="#">3 Verbes au hasard</a>
-          <a href="#">6 Verbes au hasard</a>
+          <a href="#">1 verbe au hasard</a>
+          <a href="#">3 verbes au hasard</a>
+          <a href="#">6 verbes au hasard</a>
         </div>
       </div>
-      <div class="sidebar-menu"><p>6P</p></div>
+      <div class="sidebar-menu">
+        <p>6P</p>
+        <div class="sidebar-menu-content-2">
+          <div class="sidebar-menu-tittle">
+            <h5>Tous</h5>
+            <h5 class="sidebar-number">23</h5>
+          </div>
+          <a href="#">1 verbe au hasard</a>
+          <a href="#">5 verbes au hasard</a>
+          <a href="#">10 verbes au hasard</a>
+        </div>
+      </div>
       <div class="sidebar-menu"><p>7H</p></div>
       <div class="sidebar-menu"><p>8H</p></div>
       <div class="sidebar-menu"><p>9H</p></div>
