transition form almos done

--- a/src/index.html
+++ b/src/index.html
@@ -267,11 +267,89 @@
                 </div>
               </div>
               <hr />
-              <img
-                class="form-arrow"
-                src="/img/row_symbol.svg"
-                alt="Row symbol"
-              />
+              <div class="hiddenform-burger">
+                <img
+                  class="hiddenform-arrow"
+                  src="/img/row_symbol.svg"
+                  alt="Row symbol"
+                />
+              </div>
+              <div class="hiddenform-menu">
+                <div class="form-verb-wrapper">
+                  <h3>CONDITIONEL</h3>
+                  <div class="form-verb-settings-box">
+                    <div class="form-verb-settings">
+                      <label class="switch">
+                        <input type="checkbox" />
+                        <div class="switch-wrapper">
+                          <div class="switch-inner"></div>
+                        </div>
+                      </label>
+                      <p>Présent</p>
+                    </div>
+                    <div class="form-verb-settings">
+                      <label class="switch">
+                        <input type="checkbox" />
+                        <div class="switch-wrapper">
+                          <div class="switch-inner"></div>
+                        </div>
+                      </label>
+                      <p>Passé 2</p>
+                    </div>
+                    <div class="form-verb-settings">
+                      <label class="switch">
+                        <input type="checkbox" />
+                        <div class="switch-wrapper">
+                          <div class="switch-inner"></div>
+                        </div>
+                      </label>
+                      <p>Passé 1</p>
+                    </div>
+                  </div>
+                  <h3 class="form-mes-temps">PARTICIPE</h3>
+                  <div class="form-verb-settings-box">
+                    <div class="form-verb-settings">
+                      <label class="switch">
+                        <input type="checkbox" />
+                        <div class="switch-wrapper">
+                          <div class="switch-inner"></div>
+                        </div>
+                      </label>
+                      <p>Présent</p>
+                    </div>
+                    <div class="form-verb-settings">
+                      <label class="switch">
+                        <input type="checkbox" />
+                        <div class="switch-wrapper">
+                          <div class="switch-inner"></div>
+                        </div>
+                      </label>
+                      <p>Passé</p>
+                    </div>
+                  </div>
+                  <h3 class="form-mes-temps">GERONDIF</h3>
+                  <div class="form-verb-settings-box">
+                    <div class="form-verb-settings">
+                      <label class="switch">
+                        <input type="checkbox" />
+                        <div class="switch-wrapper">
+                          <div class="switch-inner"></div>
+                        </div>
+                      </label>
+                      <p>Présent</p>
+                    </div>
+                    <div class="form-verb-settings">
+                      <label class="switch">
+                        <input type="checkbox" />
+                        <div class="switch-wrapper">
+                          <div class="switch-inner"></div>
+                        </div>
+                      </label>
+                      <p>Passé</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
